Remove \Psi^*; add gas-charged flag plumbing for inner PVMs too

--- a/preamble.tex
+++ b/preamble.tex
@@ -407,6 +407,7 @@
 \newcommand*{\pg¬code}{\pvm¬blob}
 \newcommand*{\pg¬ram}{\mathbf{u}}
 \newcommand*{\pg¬pc}{i}
+\newcommand*{\pg¬gaschargedflag}{\tilde{g}}
 
 \newcommand*{\implications}{\mathbb{L}}
 \newcommand*{\imX}{\mathbf{x}}
@@ -790,6 +791,7 @@
 \newcommand*{\jam¬blob}{\mathfrak{j}}
 \newcommand*{\pvm¬blob}{\mathfrak{p}}
 \newcommand*{\gascounter}{\varrho}
+\newcommand*{\gaschargedflag}{\tilde{\gascounter}}
 \newcommand*{\registers}{\varphi}
 \newcommand*{\memory}{\mu}
 \newcommand*{\pvmreg}{\N_R}
