--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -317,8 +317,8 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
     % It takes a single argument: the index of last writable page (plus one) the user would like
     % to be able to access within the RW data region of the address space.
     %
-    % It returns the number of accessible pages in the RW data region, regardless of whether
-    % anything has changed.
+    % It returns the index (plus one) of the last writable page in the RW data region, regardless
+    % of whether anything has changed.
     %
     % Extract the RO data size and the stack size from the JAM program blob.
     \using (\mathbf{o}, s) &\mapsto \jam¬blob \text{ according to eq. \ref{eq:conditions}} \\
@@ -327,19 +327,19 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
     % Page index plus one of the last possible RW data region page.
     \using b &= \frac{2^{32} - 3\Cpvminitzonesize - \Cpvminitinputsize - \rnp{s}}{\Cpvmpagesize} \\
     % Current writable page count of the RW data region.
-    \using c &= |\Nclamp{a}{b} \subseteq \writable{\memory}| \\
+    \using c &= |\set{\build{p \in \Nclamp{a}{b}}{\memory_\ram¬access\subb{p} = \mathrm{W}}}| \\
     % The total gas cost, based on the number of pages that will become writable after this call.
     \using g &= 100 + \max(0, \registers_7 - a - c) \cdot 10 \\
-    \tup{\execst', \gascounter', \registers'_7, (\mathbf{u}'_\ram¬access)\interval{a}{\registers_7}} &\equiv \begin{cases}
+    \tup{\execst', \gascounter', \registers'_7, (\memory'_\ram¬access)\interval{a}{\registers_7}} &\equiv \begin{cases}
       % Not enough gas to even cover the constant cost of the call, regardless of whether it's a no-op or not.
-      \tup{\oog, \gascounter, \registers_7, (\mathbf{u}_\ram¬access)\interval{a}{\registers_7}} &\when \gascounter < 100 \\
+      \tup{\oog, \gascounter, \registers_7, (\memory_\ram¬access)\interval{a}{\registers_7}} &\when \gascounter < 100 \\
       % Expand the accessible RW data region, and return the new page count.
       \tup{\continue, \gascounter - g, \max(a + c, \registers_7), \mathrm{W}} &\otherwhen \registers_7 \leq b \land \gascounter \ge g \\
       % Otherwise just return the current writable page count.
       %
       % This will also trigger when the user doesn't have enough gas to request as many pages
       % as they want, in which case they will be able to gracefully handle this situation.
-      \tup{\continue, \gascounter - 100, a + c, (\mathbf{u}_\ram¬access)\interval{a}{\registers_7}} &\otherwise \\
+      \tup{\continue, \gascounter - 100, a + c, (\memory_\ram¬access)\interval{a}{\registers_7}} &\otherwise \\
     \end{cases}
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
